tests/snapshots/test_rls_fk_constraints__rls_fk_both_translation.snap
---
source: tests/test_rls_fk_constraints.rs
expression: "translated_sql.join(\";\\n\")"
---
PRAGMA foreign_keys = 1;
CREATE TABLE IF NOT EXISTS rls_audit (id INTEGER PRIMARY KEY AUTOINCREMENT, table_name TEXT NOT NULL, violation_type TEXT NOT NULL, row_identifier TEXT NOT NULL, policy_name TEXT, detected_at TEXT NOT NULL, severity TEXT NOT NULL, details TEXT, reported_at TEXT) STRICT;
CREATE TABLE users_rls (id BLOB PRIMARY KEY DEFAULT (uuidv7()) CHECK (length(id) = 16) NOT NULL, username TEXT NOT NULL UNIQUE, email TEXT NOT NULL) STRICT;
CREATE VIEW users AS SELECT id, username, email FROM users_rls;
CREATE TRIGGER users_insert_trigger INSTEAD OF INSERT ON users FOR EACH ROW BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy') WHERE ((NEW.username <> '')) IS NOT TRUE; INSERT INTO users_rls (id, username, email) VALUES (COALESCE(NEW.id, uuidv7()), NEW.username, NEW.email); END;
CREATE TRIGGER users_rls_insert_check BEFORE INSERT ON users_rls FOR EACH ROW WHEN ((NEW.username <> '')) IS NOT TRUE BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy'); END;
CREATE TRIGGER users_rls_update_check BEFORE UPDATE ON users_rls FOR EACH ROW BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy'); END;
CREATE TRIGGER users_update_trigger INSTEAD OF UPDATE ON users FOR EACH ROW BEGIN SELECT NULL; END;
CREATE TRIGGER users_delete_trigger INSTEAD OF DELETE ON users FOR EACH ROW BEGIN SELECT NULL; END;
CREATE TRIGGER users_rls_rls_monitor_insert AFTER INSERT ON users_rls FOR EACH ROW BEGIN INSERT INTO rls_audit (table_name, violation_type, row_identifier, policy_name, detected_at, severity, details, reported_at) SELECT 'users', 'select_not_visible', 'id=' || quote(NEW.id), 'SELECT policy', datetime('now'), 'warning', 'Row inserted into backing table but not readable through the RLS view; PostgreSQL allows this for writes without RETURNING', NULL WHERE NOT (EXISTS (SELECT 1 FROM users WHERE users.id = NEW.id)); END;
CREATE TRIGGER users_rls_rls_monitor_update AFTER UPDATE ON users_rls FOR EACH ROW BEGIN INSERT INTO rls_audit (table_name, violation_type, row_identifier, policy_name, detected_at, severity, details, reported_at) SELECT 'users', 'select_not_visible', 'id=' || quote(NEW.id), 'SELECT policy', datetime('now'), 'warning', 'Row updated in backing table but not readable through the RLS view; PostgreSQL allows this for writes without RETURNING', NULL WHERE NOT (EXISTS (SELECT 1 FROM users WHERE users.id = NEW.id)); END;
CREATE VIEW users_rls_violations AS SELECT id, username, email FROM users_rls WHERE NOT EXISTS (SELECT 1 FROM users WHERE users_rls.id = users.id);
CREATE TABLE posts_rls (id BLOB PRIMARY KEY DEFAULT (uuidv7()) CHECK (length(id) = 16) NOT NULL, author_id BLOB NOT NULL REFERENCES users_rls (id) CHECK (length(author_id) = 16), title TEXT NOT NULL, content TEXT) STRICT;
CREATE VIEW posts AS SELECT id, author_id, title, content FROM posts_rls;
CREATE TRIGGER posts_insert_trigger INSTEAD OF INSERT ON posts FOR EACH ROW BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy') WHERE ((NEW.author_id = current_app_user())) IS NOT TRUE; INSERT INTO posts_rls (id, author_id, title, content) VALUES (COALESCE(NEW.id, uuidv7()), NEW.author_id, NEW.title, NEW.content); END;
CREATE TRIGGER posts_rls_insert_check BEFORE INSERT ON posts_rls FOR EACH ROW WHEN ((NEW.author_id = current_app_user())) IS NOT TRUE BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy'); END;
CREATE TRIGGER posts_rls_update_check BEFORE UPDATE ON posts_rls FOR EACH ROW WHEN ((OLD.author_id = current_app_user())) IS NOT TRUE OR ((NEW.author_id = current_app_user())) IS NOT TRUE BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy'); END;
CREATE TRIGGER posts_update_trigger INSTEAD OF UPDATE ON posts FOR EACH ROW BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy') WHERE ((OLD.author_id = current_app_user())) AND ((NEW.author_id = current_app_user())) IS NOT TRUE; UPDATE posts_rls SET id = NEW.id, author_id = NEW.author_id, title = NEW.title, content = NEW.content WHERE (id = OLD.id) AND ((OLD.author_id = current_app_user())); END;
CREATE TRIGGER posts_delete_trigger INSTEAD OF DELETE ON posts FOR EACH ROW BEGIN DELETE FROM posts_rls WHERE (id = OLD.id) AND ((OLD.author_id = current_app_user())); END;
CREATE TRIGGER posts_rls_rls_monitor_insert AFTER INSERT ON posts_rls FOR EACH ROW BEGIN INSERT INTO rls_audit (table_name, violation_type, row_identifier, policy_name, detected_at, severity, details, reported_at) SELECT 'posts', 'select_not_visible', 'id=' || quote(NEW.id), 'SELECT policy', datetime('now'), 'warning', 'Row inserted into backing table but not readable through the RLS view; PostgreSQL allows this for writes without RETURNING', NULL WHERE NOT (EXISTS (SELECT 1 FROM posts WHERE posts.id = NEW.id)); END;
CREATE TRIGGER posts_rls_rls_monitor_update AFTER UPDATE ON posts_rls FOR EACH ROW BEGIN INSERT INTO rls_audit (table_name, violation_type, row_identifier, policy_name, detected_at, severity, details, reported_at) SELECT 'posts', 'select_not_visible', 'id=' || quote(NEW.id), 'SELECT policy', datetime('now'), 'warning', 'Row updated in backing table but not readable through the RLS view; PostgreSQL allows this for writes without RETURNING', NULL WHERE NOT (EXISTS (SELECT 1 FROM posts WHERE posts.id = NEW.id)); END;
CREATE VIEW posts_rls_violations AS SELECT id, author_id, title, content FROM posts_rls WHERE NOT EXISTS (SELECT 1 FROM posts WHERE posts_rls.id = posts.id)
